# cq-filter

./: .gitignore  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt
.github/workflows/: ci.yml  release.yml  test-release.yml
src/cq_filter/: __init__.py  cq_filter.py
src/cq_filter/tests/: conftest.py  test_filter.py  test_last.py  test_sort.py
